installed all packages

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/jakeokony1024/LiriBot/issues"
   },
-  "homepage": "https://github.com/jakeokony1024/LiriBot#readme"
+  "homepage": "https://github.com/jakeokony1024/LiriBot#readme",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
+    "spotify": "^0.3.0"
+  }
 }
