--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jakeokony1024/LiriBot#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1",
